--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,27 @@
-# Compiled class file
+# Ignore everything in this directory
+target
+.classpath
+.settings
+.project
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
+# Ignore Package Files
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Ignore Intellij-IDEA files
+*.iml
+*.ipr
+*.iws
+*.classpath
+*.settings
+*.project
+*.idea
+.DS_Store
+
+# Ignore logs
+*.log
+
+# Ignore target directories
+target/
+*.*~
