--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ extra:
   - type: linkedin
     link: https://www.linkedin.com/groups/13553064
 pages:
-- Welcome to WSO2 Siddhi GPL Execution StreamingML: index.md
+- Welcome : index.md
 - API Docs:
   - 1.0.16: api/1.0.16.md
   - 1.0.15: api/1.0.15.md
