--- a/component/pom.xml
+++ b/component/pom.xml
@@ -127,6 +127,7 @@
                             moa.*,
                             com.github.*,
                             com.yahoo.*,
+                            org.wso2.siddhi.core.*;version="${siddhi.version.range}",
                             *;resolution:=optional
                         </Import-Package>
                         <Include-Resource>
